Java 17 and JUnit5 (#9)
* Updated Maven Wrapper
* Migrated to Junit5 and cleanup
* Changed to Java 17